[workspace]
members = [
    "gpui",
    "gpui_macros",
    "gpui_tokio"
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
name = "gpuis-workspace"
authors = ["Avise"]
publish = false

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.29", features = ["full"] }
parking_lot = "0.12"
log = "0.4"
futures = "0.3"
thiserror = "1.0"
url = "2.3"
smallvec = "1.11"
